--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,31 @@
-
+html,
+body{
+  height: 100%;
+}
 
 body{
+  font-size: 19px;
+  line-height: 25px;
+  color: $text;
+  @extend %rale-400;
+  display: flex;
+  flex-direction: column;
+}
 
+.main{
+  flex-grow: 1;
+}
+
+.container{
+  max-width: 1390px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.title{
+  font-size: 32px;
+  line-height: 40px;
+  @extend %rale-700;
+  color: $text;
+  text-align: center;
 }
